<resources>
    <string name="app_name">finansuygulama</string>
    <string name="login">LOGIN</string>
    <string name="child_login">CHILD LOGIN</string>
    <string name="Login">Log in.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_member">New member?</string>
    <string name="click_here_to_sign_up">Click here to sign up.</string>
    <string name="welcome_back">Welcome\nBack</string>
    <string name="welcome_child_login">Child\nLogin</string>
    <string name="create_account">Create Account</string>
    <string name="login_to_continue">Log in to continue</string>
    <string name="login_as_child">Log in as child</string>
    <string name="signup_to_get_started">Sign up to get started</string>
    <string name="signup">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="finance_app">FINANCE APP</string>
    <string name="finance_text">Easiest way to manage your money.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_child">Add New Child</string>
    <string name="plus">+</string>
    <string name="parent_email">Parent E-mail</string>
    <string name="delete">Delete</string>
    <string name="available_balance">Available Balance</string>
    <string name="select_language">Select Language</string>
    <string name="debts">Debts</string>
    <string name="savings">Savings</string>
    <string name="payments">Payments</string>
    <string name="more">More</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="incomes">Incomes</string>
    <string name="outcomes">Expenses</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="invalid_mail">Invalid Mail Adress\n</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="home">HOME</string>
    <string name="kids">KIDS</string>
    <string name="exchange">EXCHANGE</string>
    <string name="profile">PROFILE</string>
    <string name="new_budget">New Budget</string>
    <string name="set">Set</string>
    <string name="title">Title</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="color_picker">Color</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="title_category">Category Name</string>
    <string name="add_category">New Category</string>
    <string name="add_pocket_money">Add Pocket Money</string>
    <string name="spending_label">%1$s\'s Spendings</string>
    <string name="enter_preferences">Enter Preferences</string>
    <string name="preferences">Preferences\n</string>
    <string name="starting_budget">Starting Budget</string>
    <string name="continue_register">Continue</string>
    <string name="starting_preferences">Choose starting settings</string>
    <string name="pocket_money">Pocket Money</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="convert_from">Convert From</string>
    <string name="convert_to">Convert To</string>
    <string name="select_currency">Selected Currency</string>
    <string name="amount_to_convert">Conversion Amount</string>
    <string name="conversion_rate">Conversion Rate</string>
    <string name="convert">Convert</string>
    <string name="exchange_amount">Exchange Amount</string>
    <string name="settings">SETTINGS</string>
    <string name="main_currency">Main Currency</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_language">Language</string>
    <string name="logout">Log Out</string>
    <string name="change_user_settings">User Settings</string>
    <string name="logout_message">Are you sure you want to logout?\n</string>
    <string name="yes">Yes\n</string>
    <string name="cancel">Cancel\n</string>
    <string name="change_password">Change Password</string>
    <string name="change">Change</string>
    <string name="password_old">Old Password</string>
    <string name="password_new">New Password</string>
    <string name="password_new_again">New Password Again</string>
    <string name="no_internet">Please check\nyour connection.</string>
    <string name="reconnect_to_contiune">Connect to a network to continue using the app.</string>
    <string name="try_again">Tekrar Again</string>
    <string name="currency">Currency</string>
    <string name="budget_type">Budget Type</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="repetition">Repetition</string>
    <string name="yearly">Yearly</string>
    <string name="setting">Settings</string>
    <string name="add_debt">Add New Debt</string>
    <string name="debt_owner">Received Person/Institution</string>
    <string name="debt_amount">Amount</string>
    <string name="pay_day">Payment Deadline</string>
    <string name="bills">Bills</string>
    <string name="add_bill">Add New Bill</string>
    <string name="bill_owner">Payee Person/Institution</string>
    <string name="create_your_profile">Create your Profile</string>
    <string name="choose_photo">Choose a Photo</string>
    <string name="choose">Choose</string>
    <string name="repetition_none">One Time</string>
    <string name="repetition_monthly">Monthly</string>
    <string name="repetition_annual">Annual</string>
</resources>