<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/actionBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/kanit"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/new_budget"
            android:textSize="30sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:layout_below="@+id/actionBarLayout"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="25dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionBarLayout"
        android:padding="30dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textColorHint="@color/black"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:paddingTop="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:textColorHint="@color/black"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text">
            <!-- Replace the ColorPickerView with a button -->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit"
                android:inputType="number"/>


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            >
            <Button
                android:id="@+id/btnAddNewCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/add_category" />

            <View
                android:id="@+id/colorPreview"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:background="@drawable/circle_background" />


            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/currency"
                android:fontFamily="@font/kanit"
                android:textSize="20sp">
            </TextView>
            <Spinner
                android:id="@+id/currency_spinner"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>



        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/repetition"
                android:layout_centerVertical="true"
                android:fontFamily="@font/kanit"
                android:textSize="20sp">
            </TextView>

            <Spinner
                android:id="@+id/repetition_spinner"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/budget_type"
                android:layout_centerVertical="true"
                android:fontFamily="@font/kanit"
                android:textSize="20sp">
            </TextView>

            <RadioGroup
                android:id="@+id/budget_type_radio_group"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- RadioButtons for income and expense -->
                <RadioButton
                    android:id="@+id/income_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/income" />

                <RadioButton
                    android:id="@+id/expense_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/expense" />

            </RadioGroup>



        </RelativeLayout>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/save" />
        <!-- RadioGroup for budget type -->



    </LinearLayout>

    </androidx.cardview.widget.CardView>



</RelativeLayout>