<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="10dp">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="15dp"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_keyboard_backspace_24"/>

    <!-- "Welcome back" text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:fontFamily="@font/kanit"
        android:text="@string/welcome_child_login"
        android:textColor="@color/black"
        android:layout_gravity="left"
        android:padding="15dp"
        android:textSize="45sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_as_child"
        android:fontFamily="@font/lora"
        android:layout_gravity="left"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:layout_marginBottom="40dp"
        android:textSize="17sp"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_gravity="center"
        android:padding="15dp"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:padding="15dp"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/child_login"
                android:textSize="35sp"
                android:fontFamily="@font/kanit"
                android:textStyle="bold"
                android:layout_marginTop="-45dp"
                android:layout_marginBottom="35dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:hint="@string/parent_email"
                app:endIconMode="clear_text"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:fontFamily="@font/kanit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:fontFamily="@font/kanit"
                    android:ems="15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"
                android:fontFamily="@font/kanit"
                android:enabled="false"
                android:backgroundTint="@color/purple_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>