<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingLeft="15dp"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_keyboard_backspace_24"/>

    <!-- "Welcome back" text -->
    <TextView
        android:id="@+id/create_account_text"
        android:fontFamily="@font/kanit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingLeft="15dp"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lora"
        android:text="@string/signup_to_get_started"
        android:layout_gravity="left"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:textSize="17sp"
        />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/signup"
                android:textSize="35sp"
                android:fontFamily="@font/kanit"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                app:startIconDrawable="@drawable/first_name"
                app:endIconMode="clear_text"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:fontFamily="@font/kanit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                app:startIconDrawable="@drawable/last_name"
                app:endIconMode="clear_text"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name"
                    android:fontFamily="@font/kanit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:startIconDrawable="@drawable/phone_number"
                app:endIconMode="clear_text"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number"
                    android:fontFamily="@font/kanit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:startIconDrawable="@drawable/date_of_birth"
                app:endIconMode="clear_text"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_of_birth"
                    android:fontFamily="@font/kanit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="datetime"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:startIconDrawable="@drawable/email"
                app:endIconMode="clear_text"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:fontFamily="@font/kanit"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/password"
                app:passwordToggleEnabled="true"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:fontFamily="@font/kanit"
                    android:inputType="textPassword"
                    android:ems="15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signup"
                android:text="@string/signup"
                android:fontFamily="@font/kanit"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/purple_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/log_in_text"
                android:fontFamily="@font/lora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>